--- a/K3ComputerScience/Proyecto/index.html
+++ b/K3ComputerScience/Proyecto/index.html
@@ -81,49 +81,50 @@
         <button id="inscribir-en-grupo-btn">Inscribir en Grupo</button>
     </div>
 
-
     <!-- Formulario para buscar un alumno -->
-    <div>
+    <div id="busqueda-seccion">
         <h2>Buscar Alumno</h2>
         <input type="text" id="busqueda" placeholder="Nombre o Apellidos">
         <button id="buscar-btn">Buscar</button>
+        <h2>Resultados de Busqueda</h2>
+        <ul id="resultados-busqueda"></ul>
     </div>
 
-    <!-- Lista de Alumnos -->
-    <h2>Lista de Alumnos General</h2>
-    <ul id="lista-alumnos"></ul>
-
-    <!-- Resultados de la Busqueda -->
-    <h2>Resultados de Busqueda</h2>
-    <ul id="resultados-busqueda"></ul>
+    <!-- Lista de Alumnos General -->
+    <div>
+        <h2>Lista de Alumnos General</h2>
+        <ul id="lista-alumnos"></ul>
+        <button id="ordenar-asc-btn">Ordenar Ascendente</button>
+        <button id="ordenar-desc-btn">Ordenar Descendente</button>
+    </div>
 
     <!-- Listas por Materia -->
-    <h2>Listas por Materia</h2>
     <div>
-        <button id="espanol-btn">Espanol</button>
-        <button id="matematicas-btn">Matematicas</button>
-        <button id="quimica-btn">Quimica</button>
-        <button id="fisica-btn">Fisica</button>
-        <button id="programacion-btn">Programacion</button>
+        <h2>Listas por Materia</h2>
+        <div id="listas-por-materia-container">
+            <div>
+                <button id="espanol-btn">Espanol</button>
+                <button id="matematicas-btn">Matematicas</button>
+                <button id="quimica-btn">Quimica</button>
+                <button id="fisica-btn">Fisica</button>
+                <button id="programacion-btn">Programacion</button>
+            </div>
+        
+            <div id="listas-por-materia">
+                <ul id="lista-espanol"></ul>
+                <ul id="lista-matematicas"></ul>
+                <ul id="lista-quimica"></ul>
+                <ul id="lista-fisica"></ul>
+                <ul id="lista-programacion"></ul>
+            </div>
+        </div>
     </div>
-
-    <div>
-        <ul id="lista-espanol"></ul>
-        <ul id="lista-matematicas"></ul>
-        <ul id="lista-quimica"></ul>
-        <ul id="lista-fisica"></ul>
-        <ul id="lista-programacion"></ul>
+    
+    <div id="lista-grupos-container">
+        <!-- Lista de Grupos -->
+        <h2>Lista de Grupos</h2>
+        <ul id="lista-grupos"></ul>
     </div>
-
-    <!-- Botones para ordenar la lista de alumnos -->
-    <h2>Ordenar Alumnos</h2>
-    <button id="ordenar-asc-btn">Ordenar Ascendente</button>
-    <button id="ordenar-desc-btn">Ordenar Descendente</button>
-
-    <!-- Lista de Grupos -->
-    <h2>Lista de Grupos</h2>
-    <ul id="lista-grupos"></ul>
-
 
     <script src="index.js"></script>
 </body>
